--- a/about.rmd
+++ b/about.rmd
@@ -2,4 +2,10 @@
 title: "About Me"
 ---
 
-Why I am awesome. 
+- __Name:__ Sam Fuller
+- __Ocupation:__ PhD Candidate in Political Science, University of Calfornia, Davis
+- __Hobbies:__ Hiking and watching garbage movies.
+
+
+
+![](images/berryessa.jpg)
