--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,13 @@
 ---
 title: "Sam Fuller"
+subtitle: "Assistant Professor <br> Department of Political Science <br> University of California, Davis"
+image: /images/combined_plot.png
+toc: false
+about: 
+  template: trestles
+  image-shape: rounded
+  image-width: 30em
 format: html
-editor: visual
 ---
 
 Hi there! I'm a PhD Candidate in political science at the [University of California, Davis](http://ps.ucdavis.edu/).
@@ -9,3 +15,17 @@ Hi there! I'm a PhD Candidate in political science at the [University of Califor
 My substantive research focuses on better understanding public opinion, political behavior, and political psychology. Particularly, I study ideological and affective polarization as well as partisanship as an identity and am looking at its affects on policy preferences and anti-democratic attitudes. Previously, I've also worked significantly on COVID-19 attitudes, behaviors, and policy outcomes.
 
 My methodological research is primarily focused on bridging the gap between methodologists and substantive scholars. In particular, I'm currently focused on incorporating machine learning tools into researchers' toolsets for analyzing experiments.
+
+I'm originally from a random assortment of places in the Southeast (TN, FL, & GA) and have been living in Northern California since 2017.
+
+### Research interests
+
+Machine Learning \| Experiments \| Political Psychology \| Affective Polarization
+
+### Education
+
+**🎓 PhD in Political Science, 2024 (Ongoing)** \| University of California, Davis
+
+**🎓 BS in Political Science & Economics, 2016** \| Berry College
+
+
