--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Sam Fuller"
-subtitle: "PhD Student <br> Department of Political Science <br> University of California, Davis"
-image: /images/combined_plot.png
+subtitle: "PhD Candidate <br> Machine Learning Experimental Methods <br> Polarization & Partisanship"
+image: /images/me_2.jpg
 toc: false
 about: 
   template: trestles
@@ -12,11 +12,13 @@ format: html
 
 Hi there! I'm a PhD Candidate in political science at the [University of California, Davis](http://ps.ucdavis.edu/).
 
-My substantive research focuses on better understanding public opinion, political behavior, and political psychology. Particularly, I study ideological and affective polarization as well as partisanship as an identity and am looking at its affects on policy preferences and anti-democratic attitudes. Previously, I've also worked significantly on COVID-19 attitudes, behaviors, and policy outcomes.
+My methodological research is primarily focused on creating new, and applying existing, machine learning methods for the analysis of experimental and survey data. Importantly, I care deeply about bridging the gap between methodologists who create theses methods and substantive scholars who would benefit greatly from using these methods. In that vein, I'm currently working on a series of projects with [Jack T. Rametta](http://jackrametta.com/) that introduces standardized, easy-to-use ML methods for analyzing experimental data. Our first methodological and substantive papers in this series are currently under review and available [here](https://osf.io/preprints/osf/xcwt9) and [here](https://osf.io/preprints/osf/4k38a) on OSF, respectively. I'm more than happy to field any questions and I'm definitely interested in receiving useful feedback!
 
-My methodological research is primarily focused on bridging the gap between methodologists and substantive scholars. In particular, I'm currently focused on incorporating machine learning tools into researchers' toolsets for analyzing experiments.
+My substantive research focuses on, first, improving our measurement and, second, increasing our understanding of phenomenon in public opinion, political behavior, and political psychology. Particularly, I study ideological and affective polarization as well as partisanship as an identity and am looking at its affects on policy preferences and anti-democratic attitudes. Additionally, I am also interested in a wide-array of social science questions, including those in Sociology. I am currently working on a project with [Professor Caitlin Patler](https://caitlinpatler.com/) that leverages machine learning (specifically, [DoubleML](https://docs.doubleml.org/stable/index.html)) to estimate the causal effects of immigration detention/incarceration on mental and physical health.
 
-I'm originally from a random assortment of places in the Southeast (TN, FL, & GA) and have been living in Northern California since 2017.
+I have published in journals such as PLOS One, Social Science Quarterly, Politics & Gender, and Frontiers in Political Science. My previous work focuses primarily on [COVID-19 attitudes](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0254127), [behaviors](https://onlinelibrary.wiley.com/doi/full/10.1111/ssqu.12894?casa_token=6e7Z-ZCUfysAAAAA%3A7yZfCaBB6TX6sbWXZlMGrZmmcDZlneO3w7sWqCka2PjzZCXBlOI7ghtgfxdz9DOPDZVwhv7wRajHJfi4), and [policy outcomes](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0274374). I also have a [paper](https://www.frontiersin.org/articles/10.3389/fpos.2022.984238/full) on leveraging multidimensional scaling to measure ideology and populism in Western Europe (I think it's a neat paper, check it out!).
+
+As for me, I'm originally from a random assortment of places in the Southeast (TN, FL, & GA) and have been living in Northern California since I started my PhD in 2017. In my free time I pet dogs, talk to much about movies, and try to raise awareness about social justice issues in and outside of the US.
 
 ### Research interests
 
