--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,8 @@ title: "Sam Fuller"
 subtitle: "PhD Candidate <br> Machine Learning Experimental Methods <br> Polarization & Partisanship"
 image: /images/me_2.jpg
 toc: false
-about: 
+about:
+  id: hero-heading
   template: trestles
   image-shape: rounded
   image-width: 20em
@@ -17,6 +18,17 @@ about:
 format: html
 ---
 
+
+### *News & Updates*
+
+Important news! [Christopher Hare](https://www.christopherdhare.com/), [Jack T. Rametta](http://jackrametta.com/), and I have received an advance contract for our book, *Advanced Machine Learning for Experiments in the Social Sciences*, to be published in the Cambridge Elements [Experimental Political Science series](https://www.cambridge.org/core/publications/elements/experimental-political-science).
+
+---
+
+:::{#hero-heading}
+
+### About Me
+
 Hi there! I'm a PhD Candidate in the [Political Science Department](http://ps.ucdavis.edu/) at the University of California, Davis.
 
 My methodological research is primarily focused on creating new, and applying existing, machine learning methods for the analysis of experimental and survey data. Importantly, I care deeply about bridging the gap between methodologists who create theses methods and substantive scholars who would benefit greatly from using these methods. In that vein, I'm currently working on a series of projects with [Jack T. Rametta](http://jackrametta.com/) that introduces standardized, easy-to-use ML methods for analyzing experimental data. Our first methodological and substantive papers in this series are currently under review and available [here](https://osf.io/preprints/osf/xcwt9) and [here](https://osf.io/preprints/osf/4k38a) on OSF, respectively. I'm more than happy to field any questions and I'm definitely interested in receiving useful feedback!
@@ -27,6 +39,8 @@ I have published in journals such as PLOS One, Social Science Quarterly, Politic
 
 As for me, I'm originally from a random assortment of places in the Southeast (TN, FL, & GA) and have been living in Northern California since I started my PhD in 2017. In my free time I pet dogs, talk too much about movies, and try to raise awareness about social justice issues in and outside of the US.
 
+---
+
 ### Research interests
 
 Machine Learning \| Experiments \| Political Psychology \| Affective Polarization
@@ -36,3 +50,7 @@ Machine Learning \| Experiments \| Political Psychology \| Affective Polarizatio
 **🎓 PhD in Political Science, 2024 (Ongoing)** \| University of California, Davis
 
 **🎓 BS in Political Science & Economics, 2016** \| Berry College
+
+:::
+
+
