--- a/research.qmd
+++ b/research.qmd
@@ -3,7 +3,7 @@ title: "Research"
 image: /images/combined_plot.png
 ---
 
-![](/images/combined_plot.png){width=600}
+![](/images/combined_plot.png){width="600"}
 
 In general, I'm deeply interested in measuring political attitudes and opinions primarily using dimensional scaling and machine learning. Furthermore, I have an ongoing research project with [Jack Rametta](https://jackrametta.com/) on incorporating machine learning into experimental analyses in the social sciences. So far, my previous research has worked to better understand COVID attitudes and behaviors and the dimensionality of affective polarization.
 
@@ -12,46 +12,42 @@ In general, I'm deeply interested in measuring political attitudes and opinions 
 -   *Advanced Machine Learning for Experiments in the Social Sciences*
     -   With Jack T. Rametta & Christopher D. Hare
     -   Under advance contract for publication in the [Cambridge Elements Experimental Political Science Series](https://www.cambridge.org/core/publications/elements/experimental-political-science)
-    
-"Machine learning tools are being more frequently adopted to various stages of the social science workflow. However, this field’s growth has been limited by a lack of principled instruction on applying these methods and the esoteric nature of their current implementations. This Element introduces a comprehensive approach for social scientists looking to incorporate machine learning methods into experimental analysis. Specifically, we provide a flexible, data-driven approach to improve performance on tasks such as balance testing, attrition detection, the measurement of abstract concepts, and treatment effect estimation. Throughout, we detail the advantages of machine learning over traditional methods for these applications and provide practical guidance for evaluating validity, enhancing performance, and presenting results. We conclude by summarizing the myriad implications of these methods for experimental design, including how they integrate with pre-registration. Additionally, we provide a family of R packages with accompanying code and interactive walkthroughs to guide researchers through the host of methods and processes covered. This Element provides an approachable guide for social scientists who wish to apply cutting-edge machine learning methods to enhance the quality and resolution of their experimental research."
+
+"Machine learning tools are being more frequently adopted to various stages of the social science workflow. However, this field's growth has been limited by a lack of principled instruction on applying these methods and the esoteric nature of their current implementations. This Element introduces a comprehensive approach for social scientists looking to incorporate machine learning methods into experimental analysis. Specifically, we provide a flexible, data-driven approach to improve performance on tasks such as balance testing, attrition detection, the measurement of abstract concepts, and treatment effect estimation. Throughout, we detail the advantages of machine learning over traditional methods for these applications and provide practical guidance for evaluating validity, enhancing performance, and presenting results. We conclude by summarizing the myriad implications of these methods for experimental design, including how they integrate with pre-registration. Additionally, we provide a family of R packages with accompanying code and interactive walkthroughs to guide researchers through the host of methods and processes covered. This Element provides an approachable guide for social scientists who wish to apply cutting-edge machine learning methods to enhance the quality and resolution of their experimental research."
 
 [**Publications**]{.underline}
 
 -   [Populism and the affective partisan space in nine European publics: Evidence from a cross-national survey](https://www.frontiersin.org/articles/10.3389/fpos.2022.984238/full)
     -   With Will Horne, James Adams, & Noam Gidron
-
 -   [Assessing the effectiveness of COVID-19 vaccine lotteries: A cross-state synthetic control methods approach](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0274374)
     -   With Sara Kazemian, Carlos Algara, & Daniel J. Simmons
-
 -   [The role of race and scientific trust on support for COVID-19 social distancing measures in the United States](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0254127)
     -   With Sara Kazemian & Carlos Algara
-
 -   [The Interactive Effects of Scientific Knowledge and Gender on COVID‐19 Social Distancing Compliance](https://onlinelibrary.wiley.com/doi/full/10.1111/ssqu.12894?casa_token=6e7Z-ZCUfysAAAAA%3A7yZfCaBB6TX6sbWXZlMGrZmmcDZlneO3w7sWqCka2PjzZCXBlOI7ghtgfxdz9DOPDZVwhv7wRajHJfi4)
     -   With Carlos Algara, Christopher D. Hare, & Sara Kazemian
-
 -   [The Conditional Effects of Scientific Knowledge & Gender on Support for COVID-19 Government Containment Policies in a Partisan America](https://www.cambridge.org/core/journals/politics-and-gender/article/conditional-effect-of-scientific-knowledge-and-gender-on-support-for-covid19-government-containment-policies-in-a-partisan-america/C4AEB27D4046433749A883941AC74809)
-    - With Carlos Algara & Christopher D. Hare
+    -   With Carlos Algara & Christopher D. Hare
 
 [**Research in Preparation**]{.underline}
 
 *Research Under Review*
 
--   [The Balance Permutation Test: A Machine Learning Replacement for Balance Tables](https://osf.io/xcwt9)
+-   [The Dangers of Calculating Conditional Effects: A Reevaluation of Barber and Pope (2019)](https://osf.io/preprints/osf/hwzsu)
     -   With Jack T. Rametta
-
+-   [The Balance Permutation Test: A Machine Learning Replacement for Balance Tables](https://osf.io/preprints/osf/xcwt9)
+    -   With Jack T. Rametta
 -   [Affect, Not Ideology: The Psychological Mechanisms of Partisan Information Processing](https://osf.io/preprints/osf/4k38a)
     -   With Nicolás de la Cerda & Jack T. Rametta
 
 *Working Papers*
 
--   Negative Partisanship – Disdain Towards Out-Party Leaders, Out-Party Supporters, or Both?
+-   Playing (Un)Fair to Win: A New Measure of (Un)Democratic Attitudes for Survey Research
+    -   With Hilary Izatt
+-   Negative Partisanship -- Disdain Towards Out-Party Leaders, Out-Party Supporters, or Both?
     -   With Alexa Bankert & Tabitha Lamberth
-
 -   [Towards a General Methodology of Bridging Ideological Spaces](https://www.researchgate.net/publication/343736604_Towards_a_General_Methodology_of_Bridging_Ideological_Spaces)
     -   With Tzu-Ping Liu & Gento Kato
-
 -   Progressives and Never-Trumpers: Contrastive Principal Component Analysis as an Alternative Method for Public Opinion Research
     -   With Tzu-Ping Liu
-
 -   Rational Voting in the Age of Ideological Polarization & Responsible Parties: Examining Presidential Elections from 1972--2020
     -   With Carlos Algara
