--- a/research.qmd
+++ b/research.qmd
@@ -41,11 +41,12 @@ In general, I'm deeply interested in measuring political attitudes and opinions 
     -   With Jack T. Rametta
 -   [The Balance Permutation Test: A Machine Learning Replacement for Balance Tables](https://osf.io/preprints/osf/xcwt9)
     -   With Jack T. Rametta
+-   [Playing (Un)Fair to Win: A New Measure of (Un)Democratic Attitudes for Survey Research](https://osf.io/preprints/osf/bex4z)
+    -   With Hilary Izatt
 
 *Working Papers*
 
--   Playing (Un)Fair to Win: A New Measure of (Un)Democratic Attitudes for Survey Research
-    -   With Hilary Izatt
+
 -   Negative Partisanship -- Disdain Towards Out-Party Leaders, Out-Party Supporters, or Both?
     -   With Alexa Bankert & Tabitha Lamberth
 -   [Towards a General Methodology of Bridging Ideological Spaces](https://www.researchgate.net/publication/343736604_Towards_a_General_Methodology_of_Bridging_Ideological_Spaces)
