--- a/teaching.qmd
+++ b/teaching.qmd
@@ -3,7 +3,10 @@ title: "Teaching"
 editor: visual
 ---
 
-This page is organized in two sections. The first is a record of courses that I've assisted with, both graduate and undergraduate. Primarily, I've worked on assisting [Chris Hare](https://www.christopherdhare.com/) with his machine learning course at the ICPSR Summer Program. The second is a summary of additional lectures and seminars I've conducted in and out of courses and within my department. I've included access to these documents where available.
+This page is organized in three sections. The first is a record of courses that I have (or will be) teaching as the instructor of record. The second lists the courses that I've assisted with, both graduate and undergraduate. Primarily, I've worked on assisting [Chris Hare](https://www.christopherdhare.com/) with his machine learning course at the ICPSR Summer Program. The third is a summary of additional lectures and seminars I've conducted in and out of courses and within my department. I've included access to these documents where available.
+
+[**Instructor Positions**]{.underline}
+-   ICPSR Summer Program, Topical Workshop: [Causal Machine Learning for Observational and Experimental Research](content/ICPSR_Causal_Machine_Learning_Syllabus_2025.pdf) (August 2025, with Jack T. Rametta)
 
 [**TA Positions**]{.underline}
 
